--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="#contact" class="inline-block bg-yellow-400 text-blue-900 font-semibold px-8 py-3 rounded-lg shadow-lg hover:bg-yellow-300 transition">Get a Free Consultation</a>
       </div>
       <div class="md:flex-1">
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80" alt="Technician working with internet equipment and wires in server room" class="rounded-lg shadow-lg mx-auto" />
+        <img src="https://unsplash.com/photos/a-rack-of-servers-with-wires-and-wires-attached-to-them-c-lSQecD9oI" alt="Technician working with internet equipment and wires in server room" class="rounded-lg shadow-lg mx-auto" />
       </div>
     </div>
   </header>
